--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "recharts": "^2.1.16",
     "recoil": "^0.7.6",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "tailwind-styled-components": "^2.2.0",
     "tailwindcss": "^3.2.4",
     "use-immer": "^0.8.1",
@@ -61,5 +62,6 @@
   },
   "msw": {
     "workerDirectory": "public"
-  }
+  },
+  "proxy": "http://localhost:3008"
 }
