--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,10 @@
     "react": "^18.2.0",
     "react-calendar": "^4.0.0",
     "react-dom": "^18.2.0",
-    "react-kakao-maps-sdk": "^1.1.5",
     "react-js-pagination": "^3.0.3",
+    "react-kakao-maps-sdk": "^1.1.5",
     "react-modal": "^3.16.1",
+    "react-paginate": "^8.1.4",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
     "recharts": "^2.1.16",
